# kaitai_struct_benchmarks

./: .gitignore  README.md  build-formats  config  generate-all  run-cpp_stl  run-python  run-ruby
formats/: benchmark_process_xor.ksy  ext2.ksy  pcap.ksy
generate/: gen_benchmark_process_xor  gen_ext2  gen_pcap_http
spec/cpp_stl/: CMakeLists.txt  main.cpp  run_benchmark_process_xor.cpp  run_ext2.cpp  run_pcap.cpp
spec/java/src/io/kaitai/struct/benchmarks/: Benchmark.java  Main.java  TestBenchmarkProcessXor.java  TestExt2.java  TestPcap.java
spec/python/: run_benchmark_process_xor.py  run_ext2.py  run_pcap.py
spec/ruby/: helpers.rb  run_benchmark_process_xor.rb  run_ext2.rb  run_pcap.rb
